# iterm-tmuxify

./: .gitignore  PLAN.md  README.md  pyproject.toml
configs/: directoryresearch.yml  example.yml
src/iterm_tmuxify/: __init__.py  cli.py  config.py  layouts.py  tmux.py
tests/: test_config.py
